--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aabb-3d",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "3d axis aligned bounding boxes",
   "main": "index.js",
   "scripts": {
@@ -29,11 +29,29 @@
   "testling": {
     "files": "test.js",
     "browsers": {
-      "ie": [ 10 ],
-      "firefox": [ 13, 14, 15, 16, 17, "nightly" ],
-      "chrome": [ 20, 23, "canary" ],
-      "safari": [ 6 ],
-      "opera": [ 12, "next" ]
+      "ie": [
+        10
+      ],
+      "firefox": [
+        13,
+        14,
+        15,
+        16,
+        17,
+        "nightly"
+      ],
+      "chrome": [
+        20,
+        23,
+        "canary"
+      ],
+      "safari": [
+        6
+      ],
+      "opera": [
+        12,
+        "next"
+      ]
     }
   }
 }
